--- a/views/pet-tmpl.html
+++ b/views/pet-tmpl.html
@@ -1,21 +1,20 @@
-        <!--pet Image-->
-        <!--pet Image click collapse the image-->
-        <a class="pet-grid__pet" >
-            <img class="pet-grid__img"   sizes="(min-width: 960px) 33vw, (min-width: 769px) 50vw, 100vw" alt="">
-        </a>
-        <a class="pet-grid__pet">
-            show image
-        </a>
 
-        <!--pet Meta-->
-        <div class="pet-grid__meta">
-            <!--Name click should redirect to the pet-details section. Remember to pass along the pet id so you can make an api call
-        to get the specific pet details-->
-            <h3 class="pet-grid__name"><a><!--Name--></a></h3>
+    <a class="pet-grid__pet" >
+        <img class="pet-grid__img"   sizes="(min-width: 960px) 33vw, (min-width: 769px) 50vw, 100vw" ng-src="{{pet.image}}" ng-show="toggler" ng-click="toggler=!toggler">
+    </a>
+    <a class="pet-grid__pet" ng-click="toggler=!toggler" ng-hide="toggler">
+        show image
+    </a>
 
-            <!--pet Breed-->
-            <h4 class="pet-grid__sub"><!--Breed--></h4>
+    <!--pet Meta-->
+    <div class="pet-grid__meta">
+        <!--Title click should redirect to the pet-details section. Remember to pass along the pet id so you can make an api call
+    to get the specific pet details-->
+        <h3 class="pet-grid__name"><a ui-sref="bio({id:pet.id})">{{pet.name}}</a></h3>
 
-            <!--pet Age-->
-            <div class="pet-grid__price"><!--Age--> in dog years</div>
-        </div>
+        <!--pet Breed-->
+        <h4 class="pet-grid__sub">{{pet.breed}}</h4>
+
+        <!--pet Age-->
+        <div class="pet-grid__price">{{pet.age}} in dog years</div>
+    </div>
